# solana_practice

./: .gitignore  Cargo.toml  README.md
client/src/: main.rs
create_spl_token/client/: Cargo.toml
mint_token/client/src/: .main.rs.swp  main.rs
mint_token/program/: Cargo.toml
mint_token/program/src/: lib.rs
src/: lib.rs
