[package]
name = "client"
version = "0.1.0"
authors = ["HappyFeet07 <jack0978239920@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-cli-config = "1.6.7"
solana-sdk = "1.6.7"
solana-client = "1.6.7"
spl-token = "3.1.0"
