[package]
name = "program"
version = "0.1.0"
authors = ["HappyFeet07 <jack0978239920@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
borsh = "0.7.1"
borsh-derive = "0.8.1"
solana-program = "=1.6.7"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "=1.6.7"
solana-sdk = "=1.6.7"

[lib]
name = "spl"
crate-type = ["cdylib", "lib"]
